Fix: alignment in table + dropdown hover problem

--- a/style.css
+++ b/style.css
@@ -1,11 +1,3 @@
-.db-debug-1{
-    background-color: red;
-}
-
-.db-debug-2{
-    border: 2px solid red;
-}
-
 *{
     font-family: "Roboto", sans-serif;
 }
@@ -19,6 +11,7 @@ header{
     left: 0;
     width: 100%;
     height: 50px;
+    z-index: 10;
 }
 
 header .logo,
@@ -52,7 +45,7 @@ header .large-logo{
 .dropdown-menu{
     top: 20px;
     right: 5px;
-    z-index: 50000;
+    /* z-index: 50000; */
 }
 
 /*******************/
@@ -109,6 +102,7 @@ header .large-logo{
 main{
     width: 100%;
     overflow-y: auto;
+    z-index: 9;
 }
 
 /*******************/
@@ -212,7 +206,7 @@ main table tbody td{
 
 /* name column */
 
-.db-col-name a{
+/* .db-col-name a{
     width: 1.5rem;
     height: 1.5rem;
     background-color: salmon;
@@ -220,7 +214,19 @@ main table tbody td{
     border-radius: 50%;
     display: inline-block;
     text-decoration: none;
+} */
+
+.db-col-name a{
+    text-decoration: none;
 }
+
+.db-col-name a i{
+    background-color: salmon;
+    color: var(--bs-white);
+    border-radius: 50%;
+    padding: 0.5rem;
+}
+
 
 /* actions column */
 
